Ventana about terminada y funcionando